# collision-detection-d3d

./: .gitignore  CMakeLists.txt  README.md  benchmarks.md  collision.hlsl  collision_dx.cpp  collision_dx.h  dx_profile.h  main.cpp  shared_state.cpp
include/: collision_detection_d3d.h
src/: algo_simple.cpp  algo_simple.hlsl  collision_dx.cpp  dx_common.h  dx_profile.h  dx_shared.h  main.cpp  shared.h  shared_state.cpp
